@@ -42,3 +42,5 @@
 	* Fixed a but in 'Profile::loadDirectory()' that would fail when
 	given an absolute directory path.
 	* Added a 'Directory Load Absolute Path Test' test.
+2024-11-01 Fred Gleason <fredg@paravelsystems.com>
+	* Incremented the package version to 1.2.1.
